added base64 class, updated utils to use it